basic html outline done

--- a/index.html
+++ b/index.html
@@ -3,8 +3,37 @@
   <head>
     <meta charset="utf-8">
     <title>Salary Calculator</title>
+    <link rel="stylesheet" href="style.css">
+    <script src="jquery-3.2.1.min.js"></script>
+    <script src="client.js"></script>
   </head>
   <body>
+    <div class="container">
+      <div class="header">
+        <h1>Salary Calculator</h1>
+      </div>
+      <div class="form"><!--user input -->
+        <div class="first">
+          <p>First Name: </p>
+          <input type="text" class='firstName'>
+        </div>
+        <div class="last">
+          <p>Last Name: </p>
+          <input type="text" class="lastName">
+        </div>
+        <div class="idNum">
+          <p>ID Number: </p>
+          <input type="text" class="idNumber">
+        </div>
+        <div class="title">
+          <p>Salary: </p>
+          <input type="text" class="jobTitle">
+        </div>
+      </div>
+      <div class="totalCostsDisplay"><!--total costs-->
 
+      </div>
+    </div>
+<!-- employee first name, last name, ID number, job title, annual salary-->
   </body>
 </html>
