clear function working

--- a/index.html
+++ b/index.html
@@ -13,27 +13,38 @@
         <h1>Salary Calculator</h1>
       </div>
       <div class="form"><!--user input -->
-        <div class="first">
+        <div class="first"><!--first name field-->
           <p>First Name: </p>
-          <input type="text" class='firstName'>
+          <input type="text" class='firstName input'>
         </div>
-        <div class="last">
+        <div class="last"><!--last name field-->
           <p>Last Name: </p>
-          <input type="text" class="lastName">
+          <input type="text" class="lastName input">
         </div>
-        <div class="idNum">
+        <div class="idNum"><!--ID number field-->
           <p>ID Number: </p>
-          <input type="text" class="idNumber">
+          <input type="text" class="idNumber input">
         </div>
-        <div class="title">
-          <p>Salary: </p>
-          <input type="text" class="jobTitle">
+        <div class="title"><!--title field-->
+          <p>Job Title: </p>
+          <input type="text" class="jobTitle input">
+        </div>
+        <div class="employeeSalary"><!--salary-->
+          <p>Employee Salary</p>
+          <input type="text" class='salary input'>
+        </div>
+        <div class="submit"><!--submit form-->
+          <button type="button" class="submitButton">Submit</button>
         </div>
       </div>
-      <div class="totalCostsDisplay"><!--total costs-->
+      <div class="employeeDisplay"><!--list of employees entered-->
 
       </div>
+      <div class="salaryCalculation"><!--salaray calculation-->
+        <div class="salaryTotal">
+          <p>Total Salary:</p>
+        </div>
+      </div>
     </div>
-<!-- employee first name, last name, ID number, job title, annual salary-->
   </body>
 </html>
