simplified dom push

--- a/index.html
+++ b/index.html
@@ -37,13 +37,20 @@
           <button type="button" class="submitButton">Submit</button>
         </div>
       </div>
-      <div class="employeeDisplay"><!--list of employees entered-->
-
-      </div>
       <div class="salaryCalculation"><!--salaray calculation-->
         <div class="salaryTotal">
           <p>Total Salary:</p>
         </div>
+      </div>
+      <div class="employeeDisplay"><!--list of employees entered-->
+        <table class='table'>
+          <tr>
+            <th>Employee Name</th>
+            <th>Employee ID</th>
+            <th>Job Title</th>
+            <th>Salary</th>
+          </tr>
+        </table>
       </div>
     </div>
   </body>
