working on salary total

--- a/index.html
+++ b/index.html
@@ -38,17 +38,19 @@
         </div>
       </div>
       <div class="salaryCalculation"><!--salaray calculation-->
-        <div class="salaryTotal">
+        <div class="salaryDisplay">
           <p>Total Salary:</p>
+          <div class="salaryTotal"></div>
         </div>
       </div>
       <div class="employeeDisplay"><!--list of employees entered-->
         <table class='table'>
           <tr>
+            <th class="deleteRow">Delete</th>
             <th>Employee Name</th>
             <th>Employee ID</th>
             <th>Job Title</th>
-            <th>Salary</th>
+            <th class='salaryAmount'>Salary</th>
           </tr>
         </table>
       </div>
