--- a/index.html
+++ b/index.html
@@ -45,12 +45,12 @@
       </div>
       <div class="employeeDisplay"><!--list of employees entered-->
         <table class='table'>
-          <tr>
-            <th class="deleteRow">Delete</th>
+          <tr class='header row'>
+            <th>Delete</th>
             <th>Employee Name</th>
             <th>Employee ID</th>
             <th>Job Title</th>
-            <th class='salaryAmount'>Salary</th>
+            <th>Salary</th>
           </tr>
         </table>
       </div>
