all functionality working

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       <div class="salaryCalculation"><!--salaray calculation-->
         <div class="salaryDisplay">
           <p>Total Salary:</p>
-          <div class="salaryTotal"></div>
+          <span class="salaryTotal"></span>
         </div>
       </div>
       <div class="employeeDisplay"><!--list of employees entered-->
