style in progress

--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
     <script src="client.js"></script>
   </head>
   <body>
+    <div class="header">
+      Salary Calculator
+    </div>
     <div class="container">
-      <div class="header">
-        <h1>Salary Calculator</h1>
-      </div>
       <div class="form"><!--user input -->
         <div class="first"><!--first name field-->
           <p>First Name: </p>
@@ -46,11 +46,11 @@
       <div class="employeeDisplay"><!--list of employees entered-->
         <table class='table'>
           <tr class='header row'>
-            <th>Delete</th>
-            <th>Employee Name</th>
-            <th>Employee ID</th>
-            <th>Job Title</th>
-            <th>Salary</th>
+            <th class='tableHeader'>Delete</th>
+            <th class='tableHeader'>Employee Name</th>
+            <th class='tableHeader'>Employee ID</th>
+            <th class='tableHeader'>Job Title</th>
+            <th class='tableHeader'>Salary</th>
           </tr>
         </table>
       </div>
