most formatting done

--- a/index.html
+++ b/index.html
@@ -15,23 +15,23 @@
     <div class="container">
       <div class="form"><!--user input -->
         <div class="first"><!--first name field-->
-          <p>First Name: </p>
+          <p class='inputText'>First Name: </p>
           <input type="text" class='firstName input'>
         </div>
         <div class="last"><!--last name field-->
-          <p>Last Name: </p>
+          <p class='inputText'>Last Name: </p>
           <input type="text" class="lastName input">
         </div>
         <div class="idNum"><!--ID number field-->
-          <p>ID Number: </p>
+          <p class='inputText'>ID Number: </p>
           <input type="text" class="idNumber input">
         </div>
         <div class="title"><!--title field-->
-          <p>Job Title: </p>
+          <p class='inputText'>Job Title: </p>
           <input type="text" class="jobTitle input">
         </div>
         <div class="employeeSalary"><!--salary-->
-          <p>Employee Salary</p>
+          <p class='inputText'>Employee Salary:</p>
           <input type="text" class='salary input'>
         </div>
         <div class="submit"><!--submit form-->
